// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple renders base form when props.editForm is false 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="content"
    >
      Content
    </label>
    <input
      class="form-control"
      id="content"
      name="content"
      placeholder="Something cool"
      type="text"
      value="foo"
    />
    
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="foo"
    />
    <datalist
      id="categories"
    >
      <option
        value="foo"
      />
      <option
        value="bar"
      />
    </datalist>
    
  </div>
</div>
`;

exports[`Simple renders edit form when props.editForm is true 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="content"
    >
      Content
    </label>
    <input
      class="form-control"
      id="content"
      name="content"
      placeholder="Something cool"
      type="text"
      value="foo"
    />
    
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="foo"
    />
    <datalist
      id="categories"
    >
      <option
        value="foo"
      />
      <option
        value="bar"
      />
    </datalist>
    
  </div>
  <div
    class="mb-3 mb-3"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="completed"
        name="completed"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="completed"
        title=""
      >
        Completed
      </label>
    </div>
  </div>
</div>
`;
